--- a/DiplomD/build.gradle
+++ b/DiplomD/build.gradle
@@ -1,16 +1,34 @@
-group 'DnevnikG'
+group 'DiplomD'
 version '1.0-SNAPSHOT'
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+    }
+    repositories {
+        mavenLocal()
+        mavenCentral()
 
+    }
+}
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
-
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
+apply plugin: 'javafx-gradle-plugin'
+
+
+jfx {
+    // minimal requirement for jfxJar-task
+    mainClass = 'Main'
+
+    // minimal requirement for jfxNative-task
+    vendor = 'YourName'
+}
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.6.0'
 // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.2.0'
@@ -22,6 +40,4 @@ dependencies {
     compile group: 'com.squareup.okio', name: 'okio', version: '1.11.0'
 // https://mvnrepository.com/artifact/org.json/json
     compile group: 'org.json', name: 'json', version: '20090211'
-    compile group: 'com.squareup.retrofit2', name: 'adapter-rxjava2', version: '2.2.0'
-    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.8'
 }
