--- a/DnevnikN/build.gradle
+++ b/DnevnikN/build.gradle
@@ -22,6 +22,19 @@ dependencies{
     // compile files("${System.properties['java.home']}/../lib/packager.jar")
     // when using OpenJFX (Ubuntu), please adjust accordingly
     // compile files("/usr/share/java/openjfx/lib/packager.jar")
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.6.0'
+// https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
+    compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.2.0'
+// https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+// https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson
+    compile group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.2.0'
+// https://mvnrepository.com/artifact/com.squareup.okio/okio
+    compile group: 'com.squareup.okio', name: 'okio', version: '1.11.0'
+// https://mvnrepository.com/artifact/org.json/json
+    compile group: 'org.json', name: 'json', version: '20090211'
+    compile group: 'com.squareup.retrofit2', name: 'adapter-rxjava2', version: '2.2.0'
+    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.8'
 }
 
 apply plugin: 'javafx-gradle-plugin'
@@ -33,7 +46,7 @@ apply plugin: 'javafx-gradle-plugin'
 // for all available settings please look at the class "JavaFXGradlePluginExtension"
 jfx {
     verbose = true
-    mainClass = "Diplim"
+    mainClass = "Main"
     jfxAppOutputDir = "build/jfx/app"
     jfxMainAppJarName = "project-jfx.jar"
     deployDir = "src/main/deploy"
