--- a/TestDisain/build.gradle
+++ b/TestDisain/build.gradle
@@ -18,7 +18,7 @@ repositories {
 
 dependencies{
 
-  
+    compile 'com.jfoenix:jfoenix:1.4.0'
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.6.0'
 // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.2.0'
